--- a/Lawnmower.csproj
+++ b/Lawnmower.csproj
@@ -59,10 +59,12 @@
     <Compile Include="AssignJobActivity.cs" />
     <Compile Include="JobListActivity.cs" />
     <Compile Include="LoginActivity.cs" />
+    <Compile Include="Objects\Job.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewHolders\AddViewHolder.cs" />
     <Compile Include="ViewHolders\AssignViewHolder.cs" />
+    <Compile Include="ViewHolders\JobListItemViewHolder.cs" />
     <Compile Include="ViewHolders\ListViewHolder.cs" />
     <Compile Include="ViewHolders\LoginViewHolder.cs" />
   </ItemGroup>
@@ -73,11 +75,16 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
+    <AndroidResource Include="Resources\layout\JobListItem.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\AddJobFragment.axml" />
     <AndroidResource Include="Resources\layout\AssignJobFragment.axml" />
-    <AndroidResource Include="Resources\layout\JobList.axml" />
+    <AndroidResource Include="Resources\layout\JobList.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <AndroidResource Include="Resources\layout\Login.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
