--- a/Lawnmower.csproj
+++ b/Lawnmower.csproj
@@ -155,7 +155,7 @@
     <None Include=".gitattributes" />
     <None Include=".gitignore" />
     <None Include="GettingStarted.Xamarin" />
-    <None Include="google-services %281%29.json" />
+    <GoogleServicesJson Include="google-services %281%29.json" />
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
