--- a/packages.config
+++ b/packages.config
@@ -7,17 +7,23 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="monoandroid80" />
   <package id="Rx-Main" version="2.2.5" targetFramework="monoandroid80" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.3.1" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Annotations" version="25.3.1" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Compat" version="25.3.1" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Core.UI" version="25.3.1" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="25.3.1" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Design" version="25.3.1" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Fragment" version="25.3.1" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Media.Compat" version="25.3.1" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Transition" version="25.3.1" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="25.3.1" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.3.1" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="25.3.1" targetFramework="monoandroid80" />
+  <package id="Square.OkHttp" version="2.7.5.0" targetFramework="monoandroid80" />
+  <package id="Square.OkIO" version="1.6.0.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Annotations" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Compat" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Core.UI" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Design" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Fragment" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Transition" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="26.0.2" targetFramework="monoandroid80" />
   <package id="Xamarin.Build.Download" version="0.4.10" targetFramework="monoandroid80" />
+  <package id="Xamarin.Firebase.Common" version="60.1142.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Firebase.Firestore" version="60.1142.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="60.1142.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.GooglePlayServices.Tasks" version="60.1142.1" targetFramework="monoandroid80" />
 </packages>
