notes_fragment - Created notes fragment, added it to the job list, added methods for changing notes stored as they are changed

--- a/Lawnmower.csproj
+++ b/Lawnmower.csproj
@@ -163,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapters\JobListAdapter.cs" />
+    <Compile Include="NotesActivity.cs" />
     <Compile Include="AlertBoxActivity.cs" />
     <Compile Include="AddJobActivity.cs" />
     <Compile Include="AssignJobActivity.cs" />
@@ -176,6 +177,7 @@
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared.cs" />
+    <Compile Include="ViewHolders\NotesViewHolder.cs" />
     <Compile Include="ViewHolders\AlertBoxViewHolder.cs" />
     <Compile Include="ViewHolders\AddJobViewHolder.cs" />
     <Compile Include="ViewHolders\AssignViewHolder.cs" />
@@ -201,6 +203,9 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\AlertBoxFragment.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\NotesFragment.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
