--- a/Properties/AndroidManifest.xml
+++ b/Properties/AndroidManifest.xml
@@ -5,4 +5,21 @@
 	<application>
 		<meta-data android:name="com.samsung.android.icon_container.has_icon_container" android:value="true" />
 	</application>
+
+  <!-- START Manual Firebase Additions -->
+  <receiver
+    android:name="com.google.firebase.iid.FirebaseInstanceIdInternalReceiver"
+    android:exported="false" />
+
+  <receiver
+    android:name="com.google.firebase.iid.FirebaseInstanceIdReceiver"
+    android:exported="true"
+    android:permission="com.google.android.c2dm.permission.SEND" >
+    <intent-filter>
+      <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+      <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+      <category android:name="${applicationId}" />
+    </intent-filter>
+  </receiver>
+  <!-- END Manual Firebase Additions -->
 </manifest>
