--- a/packages.config
+++ b/packages.config
@@ -85,6 +85,8 @@
   <package id="Xamarin.Firebase.Auth" version="60.1142.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Firebase.Common" version="60.1142.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Firebase.Firestore" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Firebase.Iid" version="60.1142.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Firebase.Messaging" version="60.1142.1" targetFramework="monoandroid80" />
   <package id="Xamarin.GooglePlayServices.Base" version="60.1142.1" targetFramework="monoandroid80" />
   <package id="Xamarin.GooglePlayServices.Basement" version="60.1142.1" targetFramework="monoandroid81" />
   <package id="Xamarin.GooglePlayServices.Tasks" version="60.1142.1" targetFramework="monoandroid81" />
